로그인_회원가입 페이지 리팩토링

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -24,7 +24,8 @@ span {
 }
 
 body {
-  background-color: rgb(251, 253, 255);
+/*  background-color: rgb(251, 253, 255);*/
+  background-color: white;
   margin: 1;
   padding: 1;
   font-family: "SpoqaHanSansNeo-Regular";
