--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -4,11 +4,14 @@
   src: url(../fonts/BMYEONSUNG_ttf.ttf);
 }
 body {
+  /*
+  justify-content: center;
+  
+  */
   margin: 0;
   font-family: "배민체";
   background-color: rgb(239, 253, 247);
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
@@ -19,11 +22,14 @@ div {
 
 .login-container {
   width: 100vw;
+  /*
   position: relative;
+  
+  */
 }
 
 .container-left {
-  position: absolute;
+  /*position: absolute;*/
   width: 40%;
   height: 100vh;
   display: flex;
@@ -38,14 +44,14 @@ div {
 }
 
 .container-left > p {
-  position: absolute;
+  /*position: absolute;*/
   font-size: 5vw;
   top: 20%;
   color: rgb(45, 133, 37);
 }
 
 .container-right {
-  position: absolute;
+  /*position: absolute;*/
   width: 60%;
   height: 100vh;
   right: 0;
@@ -110,21 +116,43 @@ div {
   width: 100vw;
 }
 
-.signup-container {
-  right: 0%;
-  width: 60vw;
+.login-container2 {
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+/*  top: 0%;
+  width: 100vw;
   height: 100vh;
+  z-index: 11;
+  position: absolute;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+ */}
+
+
+
+.signup-container {
+  width: 60rem;
+  height: 60rem;
   background-color: rgb(239, 253, 247);
   padding-left: 2vw;
-  position: absolute;
+  /*
+  position: relative;
+  
+  */
 }
 
 .signup-box {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  background-color: white;
+  width: 60rem;
+  height: 60rem;
+  border-radius: 10px;
+  position: relative;
+  /*
   left: 15vw;
   top: 15vh;
+  
+  */
 }
 
 .signup-container input {
@@ -133,7 +161,10 @@ div {
   margin: 0.2vw;
   border: solid 3px rgb(45, 133, 37);
   border-radius: 10px;
+  background-color: white;
+  /*
   background-color: rgb(219, 243, 219);
+  */
 }
 
 .signup-container > div {
@@ -141,9 +172,12 @@ div {
 }
 
 .signup-box > p {
-  position: absolute;
   font-size: 1.2vw;
   top: -6vh;
+  /*
+  position: absolute;
+  
+  */
 }
 
 .signup-container p {
