--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -37,39 +37,51 @@
   align-items: center;
   flex-direction: column;
   position: relative;
-  margin-top: 12rem;
+  margin-top: 3rem;
 }
 
 .smart-search-box {
-  width: 100%;
+  width: 25%;
   height: 6rem;
   text-align: center;
-  position: absolute;
-  border-top: solid 2px #6462cb;
-  border-bottom: solid 2px #6462cb;
+  position: fixed;
   padding-top: 2rem;
   padding-bottom: 2rem;
   display: flex;
   justify-content: space-around;
   align-items: none;
-  left: 0;
+  left: 2rem;
+  top: 21rem;
+  
+  
 }
 
+.smartSearchBox-Table {
+  width: 60%;
+  text-align: left;
+  font-weight: 700;
+}
+
+
 .smart-search-box input {
-  border: 2px solid #6462cb;
-  border-radius: 50px;
+  width: 100%;
+  height: 40px;
+  border: 2px solid orange;
+  border-radius: 5px;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   box-shadow: 0px 3px 5px rgb(196, 196, 196);
+  margin-bottom: 1rem;
 }
 
 .smart-search-box select {
-  border: 2px solid #6462cb;
-  border-radius: 50px;
+  width: 100%;
+  border: 2px solid orange;
+  border-radius: 5px;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-  margin-left: 2rem;
   box-shadow: 0px 3px 5px rgb(196, 196, 196);
+  margin-bottom: 1rem;
 }
 
 .smart-search-box option {
@@ -78,11 +90,9 @@
 }
 
 .smart-search-title {
-  width: 18%;
+  width: 30%;
   position: absolute;
   background-color: white;
-  border: 2px solid #6462cb;
-  left: 41%;
   top: -1.2rem;
   font-size: 1.5rem;
   text-align: center;
@@ -103,7 +113,7 @@
   width: 7rem;
   border: none;
   border-radius: 5px;
-  background-color: #6462cb;
+  background-color: orange;
   color: white;
   box-shadow: 0px 3px 5px rgb(196, 196, 196);
 }
@@ -129,27 +139,28 @@
 }
 
 .zzim-title {
-  width: 100%;
+  width: 150%;
   height: 2rem;
-  border: #6462cb solid 3px;
+  border: solid orange 3px;
   border-radius: 5px;
   background-color: white;
-  color: #6462cb;
+  color: orange;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1rem;
+  font-weight: 700;
   position: relative;
 }
 
 .zzim-link {
   position: absolute;
   right: 0.5rem;
-  color: #6462cb;
+  color: red;
 }
 
 .zzim-product {
-  width: 100%;
+  width: 150%;
   height: 300px;
   overflow-y: auto;
 }
@@ -192,19 +203,19 @@
 }
 
 .zzim-product::-webkit-scrollbar-track {
-  background-color: #9897c4;
+  background-color: silver;
   border-radius: 10px;
 }
 
 .zzim-product::-webkit-scrollbar-thumb {
-  background-color: #6462cb;
+  background-color: orange;
   border-radius: 10px;
 }
 
 .allproduct-search-box {
   width: 100%;
   position: absolute;
-  left: 0;
+  left: 11rem;
   top: 7rem;
   display: flex;
   justify-content: space-between;
@@ -245,25 +256,28 @@
 }
 
 .product-register {
-  width: 15%;
-  height: 2rem;
+  width: 12%;
+  height: 2.6rem;
   border-radius: 50px;
   border: none;
-  background-color: #6462cb;
+  background-color: orange;
   color: white;
   top: 9.5rem;
   left: 0;
   text-align: center;
-  padding-top: 0.2rem;
+  padding-top: 0.3rem;
   box-shadow: 0px 3px 5px rgb(196, 196, 196);
+  font-size: 22px;
 }
 
 .product-register:hover {
   color: white;
+  width: 15.5%;
+  height: 2.85rem;
 }
 
 .allproduct-product-box {
-  padding-left: 9%;
+  margin-left: 9%;
   position: absolute;
   top: 11rem;
   left: 1rem;
@@ -275,14 +289,14 @@
 }
 
 .allproduct-item-array {
-  margin-left: 1%;
+  margin-left: -8%;
+  padding-bottom: 0.5rem;
+  padding-left: 1%;
   position: absolute;
-  width: 92%;
+  width: 72%;
   top: 0rem;
-  left: 1rem;
-  padding-left: 1rem;
-  border-radius: 5px;
-  border: #9897c4 3px solid;
+  left: 9rem;
+  border-bottom: #9897c4 1px solid;
 }
 
 .allproduct-item-array a {
@@ -459,11 +473,12 @@
   width: 100%;
   height: 18%;
   font-size: 1.5rem;
-  border-bottom: 2px solid #6462cb;
+  border-bottom: 2px solid silver;
   display: flex;
   justify-content: left;
   align-items: center;
 }
+
 
 .detail-title-title {
   white-space: wrap;
@@ -483,6 +498,7 @@
   position: absolute;
   top: 20%;
   right: 0%;
+  font-weight: 700;
 }
 
 .nav-box {
@@ -499,18 +515,22 @@
   position: absolute;
   top: 20%;
   left: 0%;
+  font-weight: 700;
 }
 
 .detail-title-location {
   position: absolute;
   top: 28%;
   right: 0%;
+  font-weight: 700;
 }
 
 .detail-title-price {
   position: absolute;
   top: 28%;
   left: 0%;
+  font-weight: 700;
+  
 }
 
 .product-detail-text {
@@ -519,7 +539,7 @@
   top: 40%;
   height: 75%;
   border: none;
-  background-color: white;
+  background-color: rgb(255,250,230);
   resize: none;
 }
 
@@ -533,7 +553,7 @@
 }
 
 .product-detail-text::-webkit-scrollbar-thumb {
-  background-color: #6462cb;
+  background-color: orange;
   border-radius: 10px;
 }
 
@@ -564,7 +584,7 @@
 }
 
 .reserved-table-title {
-  background-color: #6462cb;
+  background-color: orange;
   color: white;
   height: 3.5rem;
 }
@@ -576,7 +596,7 @@
 
 .reserved-delete {
   border: none;
-  background-color: #6462cb;
+  background-color: red;
   color: white;
   border-radius: 5px;
 }
@@ -584,7 +604,7 @@
 .update-delete-button {
   margin-right: 1rem;
   border: none;
-  background-color: #6462cb;
+  background-color: orange;
   color: white;
   border-radius: 5px;
   font-size: 1rem;
@@ -593,7 +613,7 @@
 .reserve-on-button {
   margin-right: 1rem;
   border: none;
-  background-color: #6462cb;
+  background-color: orange;
   color: white;
   border-radius: 5px;
   width: 7rem;
@@ -609,7 +629,7 @@
 }
 
 .oneproduct-reserved-title-button {
-  background-color: #6462cb;
+  background-color: orange;
   color: white;
 }
 
@@ -673,12 +693,19 @@
   align-items: center;
   width: 50%;
   height: 100%;
-  border-bottom: solid 2px #6462cb;
+  border-bottom: solid 2px orange;
+  cursor: pointer;
 }
 
 .oneproduct-reserved-title-button {
-  border-right: solid 2px #6462cb;
+  border-right: solid 2px orange;
 }
+
+.oneproduct-reserved-title-button2 {
+  color: orange;
+}
+
+
 
 .reserve-box {
   z-index: 5;
@@ -688,7 +715,7 @@
   right: 10%;
   height: 50%;
   top: 12rem;
-  border: 2px solid #6462cb;
+  border: 2px solid orange;
   box-shadow: 5px 5px 10px grey;
   padding: 5px;
 }
@@ -696,7 +723,7 @@
 .reserve-box p {
   width: 70%;
   height: 10%;
-  border-bottom: solid #6462cb 2px;
+  border-bottom: solid orange 2px;
   display: flex;
   justify-content: left;
   align-items: center;
@@ -715,7 +742,7 @@
 
 .reserve-box table input {
   border: none;
-  border-bottom: solid 2px #6462cb;
+  border-bottom: solid 2px orange;
   background-color: rgb(240, 240, 240);
   border: none;
   border-radius: 5px;
@@ -723,7 +750,7 @@
 
 #reserve-off-button {
   border: none;
-  background-color: #6462cb;
+  background-color: orange;
   color: white;
   width: 100%;
   border-radius: 5px;
@@ -742,7 +769,7 @@
   position: absolute;
   bottom: 0%;
   border: none;
-  background-color: #6462cb;
+  background-color: orange;
   color: white;
   width: 94%;
   height: 3rem;
@@ -753,6 +780,12 @@
   position: absolute;
   right: 6%;
   top: 0%;
+}
+
+.zzim-box img {
+  width: 40px; 
+  height: 40px;	
+	
 }
 
 .zzim-button {
@@ -1026,9 +1059,11 @@
   .carousel-box2 {
     border-radius: 0;
   }
+  
   .allproduct-container {
     display: none;
   }
+  
   .content-container {
     padding: 0;
     position: relative;
