--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -51,7 +51,7 @@
   justify-content: space-around;
   align-items: none;
   left: 2rem;
-  top: 21rem;
+  top: 18rem;
   
   
 }
@@ -66,7 +66,7 @@
 .smart-search-box input {
   width: 100%;
   height: 40px;
-  border: 2px solid orange;
+  border: 2px solid rgb(255,255,230);
   border-radius: 5px;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -76,7 +76,7 @@
 
 .smart-search-box select {
   width: 100%;
-  border: 2px solid orange;
+  border: 2px solid rgb(255,255,230);
   border-radius: 5px;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -94,11 +94,11 @@
   position: absolute;
   background-color: white;
   top: -1.2rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
   border-radius: 50px;
   z-index: 2;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .smart-search-title span {
@@ -113,8 +113,8 @@
   width: 7rem;
   border: none;
   border-radius: 5px;
-  background-color: orange;
-  color: white;
+  background-color: rgb(255,255,230);
+  color: black;
   box-shadow: 0px 3px 5px rgb(196, 196, 196);
 }
 
@@ -141,10 +141,10 @@
 .zzim-title {
   width: 150%;
   height: 2rem;
-  border: solid orange 3px;
+  border: solid rgb(255,133,133) 3px;
   border-radius: 5px;
   background-color: white;
-  color: orange;
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -208,7 +208,7 @@
 }
 
 .zzim-product::-webkit-scrollbar-thumb {
-  background-color: orange;
+  background-color: rgb(255,133,133);
   border-radius: 10px;
 }
 
@@ -260,8 +260,8 @@
   height: 2.6rem;
   border-radius: 50px;
   border: none;
-  background-color: orange;
-  color: white;
+  background-color: rgb(255,255,230);
+  color: black;
   top: 9.5rem;
   left: 0;
   text-align: center;
@@ -271,9 +271,9 @@
 }
 
 .product-register:hover {
-  color: white;
-  width: 15.5%;
-  height: 2.85rem;
+  color: black;
+  width: 12.5%;
+  height: 2.75rem;
 }
 
 .allproduct-product-box {
@@ -539,7 +539,7 @@
   top: 40%;
   height: 75%;
   border: none;
-  background-color: rgb(255,250,230);
+  background-color:rgb(255,255,230);
   resize: none;
 }
 
@@ -548,12 +548,12 @@
 }
 
 .product-detail-text::-webkit-scrollbar-track {
-  background-color: #b0b0c0;
+  background-color: silver;
   border-radius: 10px;
 }
 
 .product-detail-text::-webkit-scrollbar-thumb {
-  background-color: orange;
+  background-color: rgb(133,133,133);
   border-radius: 10px;
 }
 
@@ -584,8 +584,8 @@
 }
 
 .reserved-table-title {
-  background-color: orange;
-  color: white;
+  background-color: rgb(255,255,230);
+  color: black;
   height: 3.5rem;
 }
 
@@ -604,17 +604,17 @@
 .update-delete-button {
   margin-right: 1rem;
   border: none;
-  background-color: orange;
-  color: white;
+  background-color: rgb(233,233,233);
+  color: black;
   border-radius: 5px;
   font-size: 1rem;
 }
 
 .reserve-on-button {
   margin-right: 1rem;
-  border: none;
-  background-color: orange;
-  color: white;
+  border: solid rgb(255,133,133) 2px;
+  background-color: white;
+  color: black;
   border-radius: 5px;
   width: 7rem;
 }
@@ -629,8 +629,8 @@
 }
 
 .oneproduct-reserved-title-button {
-  background-color: orange;
-  color: white;
+  background-color: rgb(255,255,230);
+  color: black;
 }
 
 .reserved-connect-container {
@@ -693,16 +693,17 @@
   align-items: center;
   width: 50%;
   height: 100%;
-  border-bottom: solid 2px orange;
+  border-bottom: solid 2px rgb(233,233,233);
   cursor: pointer;
+  color: black;
 }
 
 .oneproduct-reserved-title-button {
-  border-right: solid 2px orange;
+  border-right: solid 2px rgb(233,233,233);
 }
 
 .oneproduct-reserved-title-button2 {
-  color: orange;
+  color: rgb(255,255,230);
 }
 
 
@@ -750,8 +751,8 @@
 
 #reserve-off-button {
   border: none;
-  background-color: orange;
-  color: white;
+  background-color: rgb(255,255,230);
+  color: black;
   width: 100%;
   border-radius: 5px;
 }
@@ -768,9 +769,9 @@
 .chat-on-button {
   position: absolute;
   bottom: 0%;
-  border: none;
-  background-color: orange;
-  color: white;
+  border: solid rgb(255,133,133) 2px;
+  background-color: white;
+  color: black;
   width: 94%;
   height: 3rem;
   border-radius: 5px;
