--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -65,6 +65,7 @@ li {
   bottom: 3%;
   left: 1.5rem;
   z-index: 11;
+  cursor: pointer;
 }
 
 .up img {
@@ -253,7 +254,7 @@ li {
 
 .header-sign-box a {
   color: #cddfe0;
-  font-size: 0.8vw;
+  font-size: 1vw;
   margin-right: 1rem;
   width: 8rem;
   height: 2rem;
