마이페이지 탈퇴하기 div삭제 및 회원탈퇴 페이지 생성

--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -235,10 +235,16 @@ li {
 .mypage-delete-title {
   width: 100%;
   font-size: 1rem;
+  text-align: center;
 }
 
 .mypage-delete-box {
-  width: 25rem;
+ width: 25rem;
+ display:inline-block;
+ margin-top: 20rem;
+ background-color: white;
+ padding: 2rem;
+ border: solid 2px #6462cb;
 }
 
 .form-group {
