--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -15,6 +15,14 @@
   font-size: 3rem;
 }
 
+#noChat {
+  font-size:22px; 
+  color:silver; 
+  font-weight:500;
+  margin-left: 30px;
+	
+}
+
 .chatlist-box {
   width: 50%;
   height: 500px;
