--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -15,8 +15,8 @@ a {
   width: 100%;
   height: 3rem;
   font-size: 2rem;
-  border-bottom: solid 2px #6462cb;
   color: #6462cb;
+  margin-top: -3rem;
 }
 
 .list-clean-box {
@@ -113,29 +113,32 @@ a {
 .write-form-title {
   border: none;
   width: 100%;
-  height: 2.5rem;
-  border-bottom: solid 2px #6462cb;
-  background-color: rgb(248, 248, 248);
+  height: 4rem;
+  border-bottom: solid 2px silver;
+  font-size: 30px;
 }
 
 .write-form-textarea {
+  margin-top: 1rem;
+  font-size: 20px;	
   border: none;
   width: 100%;
-  border: solid 2px #6462cb;
 }
 
 .write-form-textarea:focus {
   outline-style: solid;
   outline-width: 2px;
-  outline-color: #6462cb;
+  outline-color: white;
 }
 
-.write-form-writer {
+.write-form-region {
   border: none;
-  width: 25%;
-  height: 2.5rem;
-  border-bottom: solid 2px #6462cb;
-  background-color: rgb(248, 248, 248);
+  width: 15%;
+  height: 2rem;
+  border-left: solid 2px silver;
+  padding-left: 1rem;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .write-form-password {
@@ -147,18 +150,20 @@ a {
 }
 
 .write-form-button {
-  width: 25%;
-  height: 2.5rem;
+  width: 20%;
+  height: 3rem;
   border: none;
   background-color: #6462cb;
   color: white;
   border-radius: 5px;
+  margin-left: 80%;
+  font-size: 20px;
 }
 
 .write-form input:focus {
   outline-style: solid;
   outline-width: 2px;
-  outline-color: #6462cb;
+  outline-color: white;
 }
 
 .detail-box {
@@ -307,4 +312,6 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  margin-top: 1rem;
 }/*# sourceMappingURL=list.css.map */
