커뮤니티 리스트 동네노출_이미지크기_디자인수정

--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -835,6 +835,10 @@
   font-size: 16px;
 }
 
+.product-insert-table input:focus {
+  border: 2px solid white;	
+}
+
 .product-insert-table textarea {
   width: 100%;
   margin-top: 0.5rem;
