--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -99,12 +99,30 @@ a {
 }
 
 .list-list > td {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
+
+.list-list > td > a {
+  font-size: 1.2rem;
+}
+
+
 
 .list-list a {
   font-size: 1rem;
 }
+
+.pagingNum a {
+  font-size: 20px;
+  border: solid silver 1px;	
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 10px;
+  border-radius: 10px;
+}
+
 
 .write-form {
   width: 100%;
