--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -104,6 +104,7 @@ a {
 
 .list-list > td > a {
   font-size: 1.2rem;
+  font-weight: 600;
 }
 
 
@@ -194,7 +195,6 @@ a {
 
 .detail-delete-box {
   width: 100%;
-  border-bottom: #6462cb solid 2px;
   display: flex;
   justify-content: right;
   align-items: center;
@@ -202,8 +202,8 @@ a {
 
 .detail-title-box {
   width: 100%;
-  height: 5rem;
-  background-color: rgb(243, 243, 243);
+  height: 6rem;
+  background-color: rgb(255, 255, 230);
 }
 
 .detail-title-box > div {
@@ -211,21 +211,29 @@ a {
 }
 
 .detail-title {
-  font-size: 1.3rem;
+  font-size: 1.6rem;
   font-weight: 700;
   margin-left: 5px;
+  padding: 0.2rem;
+  margin-bottom: 5px;
 }
 
 .detail-title-box span {
-  font-size: 0.8rem;
+  font-size: 1rem;
   color: rgb(73, 73, 73);
   margin-right: 5px;
   margin-left: 5px;
+  padding: 0.2rem;
 }
 
 .detail-content-box {
-  width: 100%;
   padding: 5px;
+  margin-top: 1rem;
+  width: 1280px;
+  height: 30rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: none;
 }
 
 .detail-comment-container {
@@ -237,6 +245,52 @@ a {
   flex-direction: column;
   padding-top: 20px;
 }
+
+.boardImg {
+  width: 50%;
+  height: 30rem;
+  position: relative;
+}
+
+.boardImg img {
+  border-radius: 10px;	
+}
+
+
+.boardContent {
+  padding-left: 3%;
+  width: 50%;
+  display: flex;
+  justify-content: left;
+  align-items: none;
+  flex-direction: column;
+  position: relative;
+  font-size: 20px;
+  padding: 5px;
+  margin-left: 10px;
+  background-color: white;
+  border: none;
+}
+
+.boardContent::-webkit-scrollbar {
+  width: 1rem;
+}
+
+.boardContent::-webkit-scrollbar-track {
+  background-color: silver;
+  border-radius: 10px;
+}
+
+.boardContent::-webkit-scrollbar-thumb {
+  background-color: rgb(133,133,133);
+  border-radius: 10px;
+}
+
+
+
+
+
+
 
 .detail-comment-container textarea {
   border: 3px solid rgb(238, 238, 238);
@@ -284,8 +338,8 @@ a {
   width: 4rem;
   border-radius: 3px;
   border: none;
-  background-color: #6462cb;
-  color: white;
+  background-color: silver;
+  color: black;
   margin: 0.5rem;
 }
 
