--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -53,7 +53,7 @@ a {
 
 .list-search-form {
   width: 100%;
-  height: 2.2rem;
+  height: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -72,6 +72,8 @@ a {
   border: 2px solid #6462cb;
   border-radius: 5px;
   height: 100%;
+  font-size: 18px;
+  
 }
 
 .list-search-form-button {
@@ -112,6 +114,33 @@ a {
 .list-list a {
   font-size: 1rem;
 }
+
+.boardImg-Title {
+  margin: 0;
+  width: 50%;
+  height: 2rem;
+  border: none;
+  padding: 0.5rem;
+  background-color: rgb(243, 243, 243);
+  box-shadow: 5px 5px 5px rgb(211, 211, 211);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+	
+}
+
+#Cancel-boardImg-Title {
+  font-size: 0.9rem;
+  height: 2.4rem;
+  border: solid 2px #6462cb;
+  background-color: white;
+  color: #6462cb;
+  border-radius: 5px;
+  width: 3rem;
+  margin-left: 10px;	
+	
+}
+
 
 .pagingNum a {
   font-size: 20px;
